// Wiregost - Golang Exploitation Framework
// Copyright Â© 2020 Para
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package module;

option go_package = "modulepb";

import "module/module.proto";
import "module/option.proto";
import "module/stack.proto";
import "google/protobuf/timestamp.proto";

// Manager - This RPC service provides client consoles with 
// methods to query, setup and use modules in Wiregost.
service Manager {

        // Module commands
        rpc RunModule(RunRequest) returns (Run);
        rpc GetInfo(InfoRequest) returns (Info);
        rpc GetOptions(OptionsRequest) returns (Options);
        rpc SetOption(SetOptionRequest) returns (Option);
        rpc EditModule(EditRequest) returns (Edit);

        // Stack commands
        rpc UseModule(UseRequest) returns (Use);
        rpc PopModule(PopRequest) returns (Pop);
        rpc PushModule(PushRequest) returns (Push);
        rpc ClearStack(ClearRequest) returns (Clear);
        rpc ReloadModule(ReloadRequest) returns (Reload);

        // Module events and logging
        rpc Events(ModuleLog) returns (stream Log);
}

// Level - Some components in Wiregost will push to the event system through logger hooks,
// for more granular output of log information, especially for modules.
enum Level {
        SUCCESS = 0;
        INFO = 1;
        DEBUG = 2;
        TRACE = 3;
        WARNING = 4;
        ERROR = 5;
        PANIC = 6;
}

// Log - A log message sent by a module back to a console.
// The Manager will, in-between, log it to files if needed.
message Log {
        Level Level = 1;
        string Message = 2;
        bool Pending = 3;
        google.protobuf.Timestamp Time = 38;

        string ClientID = 5;    // Client passes its ID for mapping the console to modules being used.
}

// ModuleLog - Used by the module event stream client to identify itself during the stream setup
message ModuleLog {
        string ClientID = 1;    // Client passes its ID for mapping the console to modules being used.
        Level Level = 2;        // What level of logging is desired
}

